versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc
= Other Installation Methods

=== Air Gapped Installations

Follow xref:air-gapped/air-gapped.adoc[these steps] to install the Rancher server in an air gapped environment.

An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

=== Docker Installations

The xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[single-node Docker installation] is for Rancher users that are wanting to test out Rancher. Instead of running on a Kubernetes cluster using Helm, you install the Rancher server component on a single node using a `docker run` command.

The Docker installation is for development and testing environments only.

Since there is only one node and a single Docker container, if the node goes down, there is no copy of the etcd data available on other nodes and you will lose all the data of your Rancher server.

The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on xref:../../rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[migrating Rancher to a new cluster.]
